@@ -2,7 +2,7 @@ package com.kenstevens.stratinit.ui.shell;
 
 import org.eclipse.swt.widgets.Shell;
 
-public interface Window {
+public interface StratInitWindow {
 
 	public abstract void open(Shell shell);
 
